Fixed layout bugs in leader area section

--- a/index.css
+++ b/index.css
@@ -711,7 +711,7 @@ body {
   width: calc(50% - 10px);
   background-color: #fcf4eb;
   font-family: "SeasonSansTRIAL-Medium";
-  z-index: 2;
+  position: relative;
 }
 
 .research-wrapper {
@@ -1075,65 +1075,101 @@ body {
 }
 
 #leader-area {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(0, 1fr));
   position: relative;
-  margin-top: 86px;
-  border-top: 1px solid #000;
-  height: 1066px;
+  border-bottom: 1px solid #000;
+  padding-bottom: 60px;
 }
 
 .team-ornament {
-  grid-column: 1/2;
   position: absolute;
   bottom: -10px;
-  right: -10px;
+  left: -25px;
+  width: 375px;
+  height: 379px;
 }
 
-.team-title {
-  grid-column: 3/5;
-  padding: 25px 81px 16px 51px;
-  border-bottom: 1px solid #000;
-  height: 220px;
-  padding: 25px 81px 16px 51px;
-}
-
-.team-title p {
-  font-size: 72px;
-  line-height: 100%;
-  font-family: "SeasonMix-Regular";
-}
-
-.profile-box {
-  position: relative;
-  grid-column: 2/3;
-  width: min(100%, 306px);
-  max-width: 306px;
-  height: auto;
-  aspect-ratio: 1 / 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin: 80px auto 0 auto;
-  border: 1px solid #000;
-  overflow: hidden;
-}
-
-.profile-box-edge {
-  z-index: 2;
-  width: calc(100% - 14px);
-  height: calc(100% - 14px);
-  border-radius: 50%;
-  overflow: hidden;
-}
-
-.profile-box-edge img {
+.team-ornament img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  transform: scale(1.3);
-  object-position: 20% 35%;
+}
+
+.team-title {
+  width: 50%;
+  margin-left: auto;
+  padding: 25px 81px 16px 51px;
+  height: 220px;
+  padding: 25px 81px 16px 51px;
+  font-size: 72px;
+  line-height: 100%;
+  font-family: "SeasonMix-Regular";
+  position: relative;
+  background-color: #fcf4eb;
+}
+
+.team-title::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: calc(100% + 20px);
+  height: 1px;
+  background-color: #000;
+}
+
+.leader-wrapper {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  position: relative;
+  justify-content: space-between;
+  margin-top: 60px;
+}
+
+.profile-area {
+  width: calc(50% - 10px);
+}
+
+.profile-box {
+  margin-left: auto;
+  padding: 0 12px;
+  max-width: 336px;
+}
+
+.profile-box-edge {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fcf4eb;
+  margin-bottom: 20px;
+}
+
+.profile-box-edge img {
+  border-radius: 50%;
+  position: relative;
+  z-index: 0;
+  width: 100%;
+  padding: 22px;
+}
+
+.profile-box-edge::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url("./svg/profile-line-box.svg");
+  background-size: 100% 100%;
+}
+
+.bio {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: calc(50% - 10px);
+  padding-bottom: 50px;
 }
 
 .profile-line {
@@ -1142,7 +1178,6 @@ body {
 }
 
 .profile-desc {
-  grid-column: 2/3;
   margin: 17px auto;
 }
 
@@ -1156,41 +1191,31 @@ body {
   font-size: 40px;
   line-height: 44px;
   font-family: "SeasonMix-Regular";
-  text-align: center;
 }
 
 .leader-title {
   font-size: 22px;
   line-height: 44px;
   font-family: "SeasonSansTRIAL-Medium";
-  text-align: center;
 }
 
 .profile-ornament {
   position: absolute;
-  top: -260px;
-  left: -16px;
+  top: 30px;
+  left: calc(25% - 10px);
 }
 
 .team-lead-bio {
-  grid-column: 3/4;
-  margin-top: -336px;
   padding: 0 10px;
-  border-right: 1px solid rgba(0, 0, 0, 0.5);
-}
-
-.team-lead-bio-right {
-  margin-top: -336px;
-  padding: 0 10px;
-}
-
-.team-lead-bio p {
+  width: calc(50% - 10px);
   font-size: 16px;
   line-height: 24px;
   font-family: "SeasonSansTRIAL-Medium";
 }
 
-.team-lead-bio-right p {
+.team-lead-bio-right {
+  width: calc(50% - 10px);
+  padding: 0 10px;
   font-size: 16px;
   line-height: 24px;
   font-family: "SeasonSansTRIAL-Medium";
